refactor(ci): Simplify summary job dependencies (remove transitive deps)
Cleaned up summary job dependency declaration by removing transitive dependencies.

Before:
```yaml
summary:
  needs: [
    lint-go, lint-python, unit-tests,
    build-and-push-images, integration-tests, e2e-tests
  ]
```

After:
```yaml
summary:
  needs: [lint-go, lint-python, integration-tests, e2e-tests]
  # Note: unit-tests and build-and-push-images are transitive dependencies
```

Rationale:
- integration-tests already depends on: [unit-tests, build-and-push-images]
- e2e-tests already depends on: [unit-tests, build-and-push-images]
- Summary inherits these dependencies transitively through INT and E2E
- No need to explicitly declare them

Dependency Graph:
```
lint-go ────────────────┐
lint-python ────────────┤
                        ├──→ summary (if: always)
unit-tests ─────┐       │
build-and-push ─┼──→ integration-tests ─┤
                └──→ e2e-tests ──────────┘
```

Benefits:
- ✅ Cleaner, more maintainable dependency declaration
- ✅ Follows DRY principle (don't repeat transitive dependencies)
- ✅ Easier to understand dependency flow
- ✅ No functional change (summary still waits for all jobs)

Impact:
- Summary still runs after ALL jobs complete (or skip)
- Summary still has access to all job results via ${{ needs.*.result }}
- Lint jobs remain as direct dependencies (not transitive)

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -762,10 +762,9 @@ jobs:
   # ========================================
   summary:
     name: Test Suite Summary
-    needs: [
-      lint-go, lint-python, unit-tests,
-      build-and-push-images, integration-tests, e2e-tests
-    ]
+    needs: [lint-go, lint-python, integration-tests, e2e-tests]
+    # Note: unit-tests and build-and-push-images are transitive dependencies
+    # (INT and E2E already depend on them, no need to duplicate)
     if: always()
     runs-on: ubuntu-latest
     steps:
