--- a/test/e2e/notification/manifests/notification-deployment.yaml
+++ b/test/e2e/notification/manifests/notification-deployment.yaml
@@ -25,13 +25,6 @@ spec:
         - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
-      # Security context for volume permissions (works in both macOS and Linux)
-      # fsGroup ensures the mounted volume is writable by the container user
-      securityContext:
-        fsGroup: 1000
-        runAsNonRoot: true
-        runAsUser: 1000
-      # emptyDir volumes have correct permissions automatically (no init container needed)
       containers:
       - name: manager
         image: localhost/kubernaut-notification:e2e-test
@@ -95,13 +88,10 @@ spec:
       - name: config
         configMap:
           name: notification-controller-config
-      # DD-NOT-006: File delivery output (hostPath matches Kind extraMount)
-      # Authority: Kind extraMount at /tmp/e2e-notifications (notification_e2e.go:120)
-      # This path has correct permissions from extraMount - no permission issues
-      # Works identically in local and CI/CD environments
+      # DD-NOT-006: File delivery output (emptyDir for permission-free testing)
+      # Tests use kubectl exec to read files from pod (see file_validation_helpers_test.go)
+      # No hostPath needed - avoids permission issues entirely
       - name: notification-output
-        hostPath:
-          path: /tmp/e2e-notifications
-          type: DirectoryOrCreate
+        emptyDir: {}
       terminationGracePeriodSeconds: 10
 
