feat(datastorage): Complete DS-BUG-001 fix with 409 Conflict support and E2E test migration
Completes DS-BUG-001 fix by adding 409 Conflict response to OpenAPI spec and migrating
remaining E2E tests to use typed OpenAPI client with proper authentication.

**OpenAPI Spec Changes**:
- Added 409 Conflict response for POST /api/v1/workflows (duplicate workflow detection)
- Regenerated ogen client with CreateWorkflowConflict type
- Updated Python client documentation

**Test Migrations** (DD-API-001 compliance):
- 18_workflow_duplicate_api_test.go: Raw HTTP → DSClient.CreateWorkflow() + ogenx.ToError()
- 20_legal_hold_api_test.go: Local HTTPClient → suite AuthHTTPClient
- 16_aggregation_api_test.go: Local httpClient → suite AuthHTTPClient
- 11_connection_pool_exhaustion_test.go: Local HTTPClient → suite AuthHTTPClient
- 13_audit_query_api_test.go: Fixed enum type comparisons (string casting)

**Infrastructure**:
- Added AuthHTTPClient to datastorage_e2e_suite_test.go for non-spec endpoints
- Initialized AuthHTTPClient in both SynchronizedBeforeSuite functions (parallel process support)

**Test Results**: 171/171 passing (100% success rate)

**Authority**: DS-BUG-001, DD-API-001, DD-AUTH-014, RFC 9110 Section 15.5.10

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -190,6 +190,16 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/RFC7807Problem'
+        '409':
+          description: |
+            Conflict - Duplicate workflow.
+            Workflow with same workflow_name and version already exists.
+            
+            **Authority**: DS-BUG-001 fix (RFC 9110 Section 15.5.10)
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/RFC7807Problem'
         '500':
           description: Internal server error
           content:
