feat(ci): Add coverage report as PR comment
Add sticky-pull-request-comment action to post coverage report
directly to PRs for easier visibility. Updates existing comment
instead of creating duplicates.

Related: #36

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1038,6 +1038,13 @@ jobs:
             echo "**Note**: N/A indicates coverage data was not collected or test tier is not available for that service."
           fi
       
+      - name: Post coverage report to PR
+        if: github.event_name == 'pull_request'
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: coverage-report
+          path: ${{ env.GITHUB_STEP_SUMMARY }}
+      
       - name: Test Suite Summary
         run: |
           echo "═══════════════════════════════════════════════════════════"
