feat(cursor): Add Cursor skills for AI-assisted development
Add three specialized Cursor skills to enable collaborative AI development:

1. **supervisor-agent**: Orchestrates multi-agent development workflows
   - Business requirement decomposition
   - Worker agent delegation and monitoring
   - Quality validation and checkpoints
   - Progress tracking and reporting

2. **review-agent-work**: Validates agent-completed work
   - TDD compliance verification
   - Business requirement mapping
   - Integration pattern validation
   - Code quality assessment

3. **go-refactor-with-gopls**: Safe Go code refactoring
   - gopls-powered rename operations
   - Automated validation and testing
   - Build verification after refactoring
   - BATS test suite for reliability

Also update .gitignore to include .cursor/skills/ directory.

These skills enable systematic, quality-assured AI collaboration
following Kubernaut's APDC methodology and TDD principles.

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ build_failures.*
 # IDE configuration directories
 .cursor/*
 !.cursor/rules/
+!.cursor/skills/
 .claude/
 
 # Ephemeral documentation files
