--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1038,12 +1038,16 @@ jobs:
             echo "**Note**: N/A indicates coverage data was not collected or test tier is not available for that service."
           fi
       
+      - name: Copy summary for PR comment
+        if: github.event_name == 'pull_request'
+        run: cp "$GITHUB_STEP_SUMMARY" coverage-report.md
+      
       - name: Post coverage report to PR
         if: github.event_name == 'pull_request'
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           header: coverage-report
-          path: ${{ env.GITHUB_STEP_SUMMARY }}
+          path: coverage-report.md
       
       - name: Test Suite Summary
         run: |
