fix(ci): grant pull-requests write to Summary job for PR comment
Post coverage report failed with 'Resource not accessible by integration'
because GITHUB_TOKEN lacked permission to create/update issue comments.
Add permissions.pull-requests: write to the summary job only.

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -793,6 +793,9 @@ jobs:
     # (INT and E2E already depend on them, no need to duplicate)
     if: always()
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write  # required for sticky-pull-request-comment to post/update PR comment
     steps:
       - name: Download all coverage reports
         if: always()
