fix(ci): Coverage reporting issues in Test Suite Summary (#37)
* fix(ci): Add coverage validation and debug output for #36

Phase 1 Fixes:
- Validate COVERAGE variable before writing (prevents malformed 'holmesgpt-api,%')
- Add GitHub Step Summary debug output (file path, writability, table validation)
- Add fallback to stdout if GITHUB_STEP_SUMMARY write fails
- Apply validation pattern consistently across unit/integration/E2E coverage

Related: #36

* fix(ci): Add --coverpkg flag to fix 0.0% coverage reporting

Phase 3 Implementation:
- Add --coverpkg to unit test target (line 145)
- Add --coverpkg to integration test target (line 159)
- Add --coverpkg to E2E test target (line 182)
- Use pattern: pkg/$*/...,internal/controller/$*/...

Local Validation:
- datastorage unit tests: 0.0% → 4.9% ✅
- All tests pass with coverage enabled

Fixes 9 services reporting 0.0% coverage across 17 test tier instances.

Related: #36

* fix(ci): Add coverage validation warnings and documentation

Phase 4 Implementation:
- Add validation warnings for 0.0% coverage (lines 978-986)
- Add info messages for 100.0% coverage (lines 988-996)
- Add coverage interpretation documentation (lines 932-945)
- Handle edge cases (N/A, empty, malformed values)
- Non-blocking implementation (warnings don't fail CI)

Documentation includes:
- Code coverage vs scenario coverage distinction
- Coverage targets per test tier (70%+ unit, >50% integration, 10-15% E2E)
- Clear explanation of what metrics mean

Completes all acceptance criteria for #36:
✅ AC1: Coverage table renders properly
✅ AC2: holmesgpt-api shows valid percentage
✅ AC3: 0.0% coverage investigated and fixed
✅ AC4: Validation/warnings for suspicious values
✅ AC5: Document coverage metrics interpretation

Related: #36

* feat(ci): Add coverage report as PR comment

Add sticky-pull-request-comment action to post coverage report
directly to PRs for easier visibility. Updates existing comment
instead of creating duplicates.

Related: #36

* fea

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ build_failures.*
 # IDE configuration directories
 .cursor/*
 !.cursor/rules/
+!.cursor/skills/
 .claude/
 
 # Ephemeral documentation files
@@ -221,6 +222,11 @@ covmeta.*
 # Coverage files and directories (ANY file/directory starting with "coverage")
 coverage*
 **/coverage*
+# Exception: scripts/coverage/ directory (contains coverage tooling, not coverage data)
+!scripts/coverage/
+!scripts/coverage/**
+# Exception: Go source files named coverage*.go (e.g., test/infrastructure/coverage.go)
+!**/coverage*.go
 
 # Coverage directories (all tiers)
 coverage-unit/
