fix(demo): correct workflow signalNames and multi-node taint scripts
- crashloop: signalName CrashLoopBackOff -> KubePodCrashLooping
- stuck-rollout: signalName StuckRollout -> KubeDeploymentRolloutStuck
- pending-taint: add environment wildcard for unknown env matching
- pending-taint: taint/cleanup all kubernaut.ai/managed worker nodes

Made-with: Cursor

--- a/deploy/demo/scenarios/pending-taint/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/pending-taint/workflow/workflow-schema.yaml
@@ -14,7 +14,7 @@ actionType: RemoveTaint
 labels:
   signalName: KubePodNotScheduled
   severity: [low, medium, high, critical]
-  environment: [production, staging]
+  environment: [production, staging, "*"]
   component: "*"
   priority: "*"
 
