--- a/deploy/demo/scenarios/crashloop/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/crashloop/workflow/workflow-schema.yaml
@@ -12,7 +12,7 @@ metadata:
 actionType: GracefulRestart
 
 labels:
-  signalName: CrashLoopBackOff
+  signalName: KubePodCrashLooping
   severity: [critical, low]
   environment: [production, staging]
   component: "*"
