--- a/deploy/demo/scenarios/stuck-rollout/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/stuck-rollout/workflow/workflow-schema.yaml
@@ -12,7 +12,7 @@ metadata:
 actionType: GracefulRestart
 
 labels:
-  signalName: StuckRollout
+  signalName: KubeDeploymentRolloutStuck
   severity: [critical, low]
   environment: [production, staging]
   component: "*"
