fix(demo): add environment wildcard and update stuck-rollout image digest
- crashloop + stuck-rollout: add "*" to environment labels for unknown
  env matching from SP controller
- stuck-rollout: update workflow image digest to include remediate.sh
  readiness poll fix (#199)

Made-with: Cursor

--- a/deploy/demo/scenarios/crashloop/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/crashloop/workflow/workflow-schema.yaml
@@ -14,7 +14,7 @@ actionType: GracefulRestart
 labels:
   signalName: KubePodCrashLooping
   severity: [critical, low]
-  environment: [production, staging]
+  environment: [production, staging, "*"]
   component: "*"
   priority: "*"
 
