docs: archive recovery flow design docs, update charts and deploy manifests (Issue #180) - Phase 3
Archive recovery flow design documents (DD-RECOVERY-002/003 and related)
to docs/archive/ with deprecation headers. Update all referencing documents,
charts, and deploy manifests.

- Archive 10 recovery design docs to docs/archive/
- Update 20+ referencing docs with deprecation notes
- Copy regenerated CRDs to charts/kubernaut/crds/
- Remove recovery Rego rules from Helm chart and demo ConfigMaps
- Update RBAC comments in deploy manifests

Made-with: Cursor

--- a/deploy/holmesgpt-api/14-client-rbac.yaml
+++ b/deploy/holmesgpt-api/14-client-rbac.yaml
@@ -14,11 +14,11 @@
 # 5. HolmesGPT API receives authenticated request
 #
 # Services (1 total):
-# - AIAnalysis Controller (calls HAPI for investigation/recovery analysis)
+# - AIAnalysis Controller (calls HAPI for investigation analysis)
 #
 # Why Only AIAnalysis?
 # - AIAnalysis controller orchestrates the investigation workflow
-# - AIAnalysis is responsible for calling LLM for incident/recovery analysis
+# - AIAnalysis is responsible for calling LLM for incident analysis
 # - Gateway receives alerts but does NOT call HAPI (it creates AIAnalysis CRDs instead)
 # - This minimizes LLM API surface area and cost exposure
 #
