--- a/charts/kubernaut/crds/kubernaut.ai_signalprocessings.yaml
+++ b/charts/kubernaut/crds/kubernaut.ai_signalprocessings.yaml
@@ -168,12 +168,12 @@ spec:
                         description: Resource name
                         type: string
                       namespace:
-                        description: Resource namespace
+                        description: Resource namespace. Empty for cluster-scoped
+                          resources (e.g., Node, PersistentVolume).
                         type: string
                     required:
                     - kind
                     - name
-                    - namespace
                     type: object
                   targetType:
                     description: Target system type
@@ -472,25 +472,6 @@ spec:
                 - assignedAt
                 - priority
                 - source
-                type: object
-              recoveryContext:
-                description: |-
-                  RecoveryContext holds context for recovery attempts.
-                  DD-001: Recovery Context Enrichment
-                properties:
-                  attemptCount:
-                    description: Number of previous attempts
-                    format: int32
-                    type: integer
-                  lastFailureReason:
-                    description: Last failure reason
-                    type: string
-                  previousRemediationId:
-                    description: Previous remediation attempt ID
-                    type: string
-                  timeSinceFirstFailure:
-                    description: Time since first failure
-                    type: string
                 type: object
               severity:
                 description: |-
