feat(em): add Stabilizing phase to EffectivenessAssessment CRD
Introduce a dedicated Stabilizing phase between Pending and Assessing so
operators can observe the assessment timeline immediately while the
stabilization window is active. Derived timing fields (ValidityDeadline,
PrometheusCheckAfter, AlertManagerCheckAfter) are pre-computed and
persisted in this phase per BR-EM-009.

Phase state machine: Pending -> Stabilizing -> Assessing -> Completed/Failed
(Pending -> Assessing remains valid when StabilizationWindow == 0)

Made-with: Cursor

--- a/config/crd/bases/kubernaut.ai_effectivenessassessments.yaml
+++ b/config/crd/bases/kubernaut.ai_effectivenessassessments.yaml
@@ -308,6 +308,7 @@ spec:
                 description: Phase is the current lifecycle phase of the assessment.
                 enum:
                 - Pending
+                - Stabilizing
                 - Assessing
                 - Completed
                 - Failed
