--- a/charts/kubernaut/templates/workflowexecution/workflowexecution.yaml
+++ b/charts/kubernaut/templates/workflowexecution/workflowexecution.yaml
@@ -84,6 +84,9 @@ rules:
   - apiGroups: ["policy"]
     resources: ["poddisruptionbudgets"]
     verbs: ["get", "list", "patch"]
+  - apiGroups: ["autoscaling"]
+    resources: ["horizontalpodautoscalers"]
+    verbs: ["get", "list", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
