fix(charts): sync CRD manifests with config/crd/bases
Copy updated CRDs to chart directory:
- EA: add Stabilizing phase to enum, make namespace optional for
  cluster-scoped targets (DD-EM-003)
- RAR: correct type from date to string

Made-with: Cursor

--- a/charts/kubernaut/crds/kubernaut.ai_effectivenessassessments.yaml
+++ b/charts/kubernaut/crds/kubernaut.ai_effectivenessassessments.yaml
@@ -124,12 +124,13 @@ spec:
                     description: Name is the resource name.
                     type: string
                   namespace:
-                    description: Namespace is the resource namespace.
+                    description: |-
+                      Namespace is the resource namespace.
+                      Empty for cluster-scoped resources (e.g., Node, PersistentVolume).
                     type: string
                 required:
                 - kind
                 - name
-                - namespace
                 type: object
               signalName:
                 description: |-
@@ -152,12 +153,13 @@ spec:
                     description: Name is the resource name.
                     type: string
                   namespace:
-                    description: Namespace is the resource namespace.
+                    description: |-
+                      Namespace is the resource namespace.
+                      Empty for cluster-scoped resources (e.g., Node, PersistentVolume).
                     type: string
                 required:
                 - kind
                 - name
-                - namespace
                 type: object
             required:
             - config
@@ -306,6 +308,7 @@ spec:
                 description: Phase is the current lifecycle phase of the assessment.
                 enum:
                 - Pending
+                - Stabilizing
                 - Assessing
                 - Completed
                 - Failed
